--- a/index.html
+++ b/index.html
@@ -8,9 +8,102 @@
     <link href="scss/custom.css" rel="stylesheet">
 </head>
 <body>
-<h1>Hello, world!</h1>
+<div>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <canvas id="barra1"></canvas>
+            </div>
+            <div class="col">
+                <canvas id="barra2"></canvas>
+            </div>
+        </div>
+
+    </div>
+</div>
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script>
+    const ctx = document.getElementById('barra1');
+
+    new Chart(ctx, {
+        type: 'bar',
+        data: {
+            labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],
+            datasets: [{
+                label: '# of Votes',
+                data: [12, 19, 3, 5, 2, 3],
+                borderWidth: 1
+            }]
+        },
+        options: {
+            scales: {
+                y: {
+                    beginAtZero: true
+                }
+            }
+        }
+    });
+
+    //================================================================
+
+    const actions = [
+        {
+            name: 'Randomize',
+            handler(chart) {
+                chart.data.datasets.forEach(dataset => {
+                    dataset.data = chart.data.labels.map(() => {
+                        return [Utils.rand(-100, 100), Utils.rand(-100, 100)];
+                    });
+                });
+                chart.update();
+            }
+        },
+    ];
+
+    const DATA_COUNT = 7;
+    const NUMBER_CFG = {count: DATA_COUNT, min: -100, max: 100};
+
+    const labels = Utils.months({count: 7});
+    const data = {
+        labels: labels,
+        datasets: [
+            {
+                label: 'Dataset 1',
+                data: labels.map(() => {
+                    return [Utils.rand(-100, 100), Utils.rand(-100, 100)];
+                }),
+                backgroundColor: Utils.CHART_COLORS.red,
+            },
+            {
+                label: 'Dataset 2',
+                data: labels.map(() => {
+                    return [Utils.rand(-100, 100), Utils.rand(-100, 100)];
+                }),
+                backgroundColor: Utils.CHART_COLORS.blue,
+            },
+        ]
+    };
+
+    const config = {
+        type: 'bar',
+        data: data,
+        options: {
+            responsive: true,
+            plugins: {
+                legend: {
+                    position: 'top',
+                },
+                title: {
+                    display: true,
+                    text: 'Chart.js Floating Bar Chart'
+                }
+            }
+        }
+    };
+</script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </body>
 </html>
