--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
 
     //================================================================
 
+    // <block:actions:2>
+    // <block:actions:2>
     const actions = [
         {
             name: 'Randomize',
@@ -59,7 +61,9 @@
             }
         },
     ];
+    // </block:actions>
 
+    // <block:setup:1>
     const DATA_COUNT = 7;
     const NUMBER_CFG = {count: DATA_COUNT, min: -100, max: 100};
 
@@ -83,7 +87,9 @@
             },
         ]
     };
+    // </block:setup>
 
+    // <block:config:0>
     const config = {
         type: 'bar',
         data: data,
@@ -100,6 +106,13 @@
             }
         }
     };
+    // </block:config>
+
+    module.exports = {
+        actions: actions,
+        config: config,
+    };
+
 </script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
