--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
     // import {valueOrDefault} from '../node_modules/chart.js/dist/helpers.js';
 
     // Adapted from http://indiegamr.com/generate-repeatable-random-numbers-in-js/
+    import {Info as Utils} from "luxon";
+
     var _seed = Date.now();
 
     export function srand(seed) {
