--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
             <div class="col">
                 <canvas id="barra2"></canvas>
             </div>
+            <div class="col">
+                <canvas id="barra2"></canvas>
+            </div>
         </div>
 
     </div>
@@ -47,6 +50,59 @@
     });
 
     //================================================================
+
+
+    export const CHART_COLORS = {
+        red: 'rgb(255, 99, 132)',
+        orange: 'rgb(255, 159, 64)',
+        yellow: 'rgb(255, 205, 86)',
+        green: 'rgb(75, 192, 192)',
+        blue: 'rgb(54, 162, 235)',
+        purple: 'rgb(153, 102, 255)',
+        grey: 'rgb(201, 203, 207)'
+    };
+
+    const NAMED_COLORS = [
+        CHART_COLORS.red,
+        CHART_COLORS.orange,
+        CHART_COLORS.yellow,
+        CHART_COLORS.green,
+        CHART_COLORS.blue,
+        CHART_COLORS.purple,
+        CHART_COLORS.grey,
+    ];
+
+
+    const DATA_COUNT = 12;
+    const labels = [];
+    for (let i = 0; i < DATA_COUNT; ++i) {
+        labels.push(i.toString());
+    }
+    const datapoints = [0, 20, 20, 60, 60, 120, NaN, 180, 120, 125, 105, 110, 170];
+    const data = {
+        labels: labels,
+        datasets: [
+            {
+                label: 'Cubic interpolation (monotone)',
+                data: datapoints,
+                borderColor: CHART_COLORS.red,
+                fill: false,
+                cubicInterpolationMode: 'monotone',
+                tension: 0.4
+            }, {
+                label: 'Cubic interpolation',
+                data: datapoints,
+                borderColor: CHART_COLORS.blue,
+                fill: false,
+                tension: 0.4
+            }, {
+                label: 'Linear interpolation (default)',
+                data: datapoints,
+                borderColor: CHART_COLORS.green,
+                fill: false
+            }
+        ]
+    };
 
     const config = {
         type: 'line',
@@ -81,6 +137,8 @@
             }
         },
     };
+
+    new Chart(barra2, config);
 
 
 
