--- a/index.html
+++ b/index.html
@@ -140,55 +140,24 @@
     };
 
     new Chart(barra2, config);
-    
-    const data3 = {
-        labels: labels,
-        datasets: [{
-            type: 'bar',
-            label: 'Dataset 1',
-            backgroundColor: 'rgba(255, 99, 132, 0.5)',
-            borderColor: CHART_COLORS.red,
-            data: [2,3,5,8,1,3,5,8,9]
-        }, {
-            type: 'bar',
-            label: 'Dataset 2',
-            backgroundColor: 'rgb(54, 162, 235, 0.5)',
-            borderColor: CHART_COLORS.blue,
-            data: [8,4,3,5,7,9,1,2,4]
-        }, {
-            type: 'line',
-            label: 'Dataset 3',
-            backgroundColor: 'rgb(75, 192, 192, 0.5)',
-            borderColor: CHART_COLORS.green,
-            fill: false,
-            data: [3,2,4,6,8,0,1,2,3]
-        }]
-    };
 
+
+    
 
     const config3 = {
-        type: 'line',
-        data: data3,
+        type: 'bar',
+        data: data,
         options: {
+            responsive: true,
             plugins: {
-                title: {
-                    text: 'Chart.js Combo Time Scale',
-                    display: true
-                }
-            },
-            scales: {
-                x: {
-                    type: 'time',
-                    display: true,
-                    offset: true,
-                    ticks: {
-                        source: 'data'
-                    },
-                    time: {
-                        unit: 'day'
-                    },
+                legend: {
+                    position: 'top',
                 },
-            },
+                title: {
+                    display: true,
+                    text: 'Chart.js Bar Chart'
+                }
+            }
         },
     };
 
