--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 <div>
     <div class="container">
         <div class="row">
-            <div class="col">
+            <div class="col p-2">
                 <canvas id="barra1"></canvas>
             </div>
-            <div class="col">
+            <div class="col p-2">
                 <canvas id="barra2"></canvas>
             </div>
-            <div class="col">
+            <div class="col p-2">
                 <canvas id="barra3"></canvas>
             </div>
         </div>
@@ -147,18 +147,18 @@
         datasets: [
             {
                 label: 'Fully Rounded',
-                data: [-1,-2,-3,-3,-8,-7,4,1,-3,-9,-8],
-                borderColor: '#ab1010',
-                backgroundColor: '#a85959',
+                data: [-1,-2,-3,-3,-8,-7,4,1,-3,-9,-7,5],
+                borderColor: 'rgba(255,0,0,0.5)',
+                backgroundColor: 'rgba(255,0,0,0.05)',
                 borderWidth: 2,
                 borderRadius: Number.MAX_VALUE,
                 borderSkipped: false,
             },
             {
                 label: 'Small Radius',
-                data: [4,-6,7,8,9,2,3,4],
-                borderColor: '#350cfc',
-                backgroundColor: '#889cd0',
+                data: [4,-6,7,8,9,2,3,4,5,-9,5],
+                borderColor: 'rgba(0,128,255,0.1)',
+                backgroundColor: 'rgba(0,128,255,0.5)',
                 borderWidth: 2,
                 borderRadius: 5,
                 borderSkipped: false,
