--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
 <body>
 <div>
     <div class="container">
+        <nav class="navbar bg-body-tertiary rounded-5">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">
+                    <img src="/docs/5.3/assets/brand/bootstrap-logo.svg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+                    Bootstrap
+                </a>
+            </div>
+        </nav>
+    </div>
+    <div class="container">
         <div class="row">
             <div class="col p-2">
                 <canvas id="barra1"></canvas>
