--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
 </head>
 <body>
 <div>
-    <div class="container">
-        <nav class="navbar bg-body-tertiary rounded-5">
+    <div class="container mt-3">
+        <nav class="navbar rounded-5" style="background-color: #21202f;">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
-                    <img src="/docs/5.3/assets/brand/bootstrap-logo.svg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
-                    Bootstrap
+                    <img src="images/craos_432x128.png" alt="Logo" height="24" class="d-inline-block align-text-top">
                 </a>
             </div>
         </nav>
