--- a/index.html
+++ b/index.html
@@ -10,19 +10,22 @@
 <body>
 <div>
     <div class="container mt-3">
-        <nav class="navbar rounded-5" style="background-color: #21202f;">
+        <nav class="navbar rounded-5 shadow-lg" style="background-color: #21202f;">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
-                    <img src="images/craos_432x128.png" alt="Logo" height="24" class="d-inline-block align-text-top">
+                    <img src="images/logobrancotransp.png" alt="Logo" height="32" class="d-inline-block align-text-top">
                 </a>
             </div>
         </nav>
     </div>
-    <div class="container">
+    <div class="container mt-5">
         <div class="row">
-            <div class="col p-2">
+            <div class="col-5 p-2">
                 <canvas id="barra1"></canvas>
             </div>
+        </div>
+
+        <div class="row">
             <div class="col p-2">
                 <canvas id="barra2"></canvas>
             </div>
