--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
     </div>
     <div class="container mt-5">
         <div class="row">
-            <div class="col-5 p-2">
+            <div class="col-5 p-2 shadow">
                 <canvas id="barra1"></canvas>
             </div>
         </div>
 
-        <div class="row">
-            <div class="col p-2">
+        <div class="row mt-5">
+            <div class="col p-2 shadow">
                 <canvas id="barra2"></canvas>
             </div>
-            <div class="col p-2">
+            <div class="col p-2 shadow">
                 <canvas id="barra3"></canvas>
             </div>
         </div>
