--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
             <div class="col-5 p-2 shadow">
                 <canvas id="barra1"></canvas>
             </div>
+            <div class="col p-5">
+                <h5 class="text-success" style="text-transform: uppercase;"><b>Insights Visuais</b></h5>
+                Ferramentas modernas e uma expertise afiada para esculpir gráficos e relatórios que transcendem a simples representação, oferecendo uma visão profunda e inteligível do seu universo de dados.
+            </div>
         </div>
 
         <div class="row mt-5">
