--- a/index.html
+++ b/index.html
@@ -24,9 +24,15 @@
                 <canvas id="barra1"></canvas>
             </div>
             <div class="col p-5">
-                <h5 class="text-success" style="text-transform: uppercase;"><b>Insights Visuais</b></h5>
-                Ferramentas modernas e uma expertise afiada para esculpir gráficos e relatórios que transcendem a simples representação, oferecendo uma visão profunda e inteligível do seu universo de dados.
+                <h5 class="text-success mt-2 mb-3" style="text-transform: uppercase;"><b>Insights Visuais</b></h5>
+                <h3>Transforme dados em insights visuais extraordinários</h3>
+                <p>Com ferramentas modernas e uma expertise afiada, você pode esculpir gráficos e relatórios que vão além da simples representação.</p>
+                <ul>
+                    <li>Desperte a capacidade de apresentar uma visão profunda e inteligível dos seus dados</li>
+                </ul>
             </div>
+
+
         </div>
 
         <div class="row mt-5">
