--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Craos.NET</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
     <link href="scss/custom.css" rel="stylesheet">
 </head>
 <body>
@@ -27,8 +28,8 @@
                 <h5 class="text-success mt-2 mb-3" style="text-transform: uppercase;"><b>Insights Visuais</b></h5>
                 <h3>Transforme dados em insights visuais extraordinários</h3>
                 <p>Com ferramentas modernas e uma expertise afiada, você pode esculpir gráficos e relatórios que vão além da simples representação.</p>
-                <ul>
-                    <li>Desperte a capacidade de apresentar uma visão profunda e inteligível dos seus dados</li>
+                <ul class="list">
+                    <li><i class="bi bi-check-circle-fill text-success"></i> Desperte a capacidade de apresentar uma visão profunda e inteligível dos seus dados</li>
                 </ul>
             </div>
 
