--- a/index.html
+++ b/index.html
@@ -21,18 +21,21 @@
     </div>
     <div class="container mt-5">
         <div class="row">
-            <div class="col-5 p-2 shadow">
+            <div class="col-5 p-2 rounded shadow">
                 <canvas id="barra1"></canvas>
             </div>
+
             <div class="col p-5">
                 <h5 class="text-success mt-2 mb-3" style="text-transform: uppercase;"><b>Insights Visuais</b></h5>
                 <h3>Transforme dados em insights visuais extraordinários</h3>
                 <p>Com ferramentas modernas e uma expertise afiada, você pode esculpir gráficos e relatórios que vão além da simples representação.</p>
-                <ul class="list">
-                    <li><i class="bi bi-check-circle-fill text-success"></i> Desperte a capacidade de apresentar uma visão profunda e inteligível dos seus dados</li>
+                <ul>
+                    <li class="mb-2"><i class="bi bi-check-circle-fill text-success"></i> Desperte a capacidade de apresentar uma visão profunda dos seus dados</li>
+                    <li class="mb-2"><i class="bi bi-check-circle-fill text-success"></i> Explore a potência visual para destacar padrões e tendências de maneira intuitiva</li>
+                    <li class="mb-2"><i class="bi bi-check-circle-fill text-success"></i> Aproveite a clareza visual para comunicar informações complexas de forma acessível</li>
+                    <li class="mb-2"><i class="bi bi-check-circle-fill text-success"></i> Liberte o poder dos gráficos para tomar decisões informadas e estratégicas</li>
                 </ul>
             </div>
-
 
         </div>
 
