--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link href="scss/custom.css" rel="stylesheet">
 </head>
 <body>
-<div>
-    <div class="container mt-3">
+
+    <div class="container-lg rounded shadow cardheader">
         <nav class="navbar rounded-5 shadow-lg" style="background-color: #21202f;">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
@@ -19,6 +19,7 @@
             </div>
         </nav>
     </div>
+
     <div class="container mt-5">
         <div class="row">
             <div class="col-5 p-2 rounded shadow">
@@ -49,8 +50,8 @@
         </div>
 
     </div>
-</div>
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script type="module">
 
     const barra1 = document.getElementById('barra1');
