--- a/index.html
+++ b/index.html
@@ -10,29 +10,19 @@
     <link href="scss/custom.css" rel="stylesheet">
 </head>
 <body class="p-1 p-lg-2">
-
-<div class="rounded-4 shadow cardheader">
-    <nav class="navbar rounded-5 shadow-lg" style="background-color: #21202f;">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">
-                <img alt="Logo" class="d-inline-block align-text-top" height="32" src="images/logobrancotransp.png">
-            </a>
+    <div class="rounded-4 shadow cardheader p-2">
+        <nav class="container navbar rounded-4 shadow-lg" style="background-color: #21202f;">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">
+                    <img alt="Logo" class="d-inline-block align-text-top" height="32" src="images/logobrancotransp.png">
+                </a>
+            </div>
+        </nav>
+        <div class="container row align-items-center g-10">
+            <div class="col-lg-8"><h1 class="ls-tight fw-bolder display-3 text-white mb-5">Construção eficiente.</h1>
+                <p class="w-xl-75 lead text-white">Com as nossas ferramentas e componentes devidamente projetados pela nossa equipe, você terá o poder de elevar as expectativas do seu produto.</p>
+            </div>
         </div>
-    </nav>
-    <div class="row align-items-center g-10">
-        <div class="col-lg-8"><h1 class="ls-tight fw-bolder display-3 text-white mb-5">Build Professional Dashboards,
-            Faster than Ever.</h1>
-            <p class="w-xl-75 lead text-white">With our intuitive tools and expertly designed components, you'll have
-                the power to create professional dashboards quicker than ever.</p></div>
-        <div class="col-lg-4 align-self-end">
-            <div class="hstack gap-3 justify-content-lg-end"><a
-                    class="btn btn-lg btn-white rounded-pill bg-dark-hover border-0 shadow-none px-lg-8"
-                    href="https://themes.getbootstrap.com/product/satoshi-defi-and-crypto-exchange-theme/"
-                    target="_blank">Purchase now </a><a class="btn btn-lg btn-dark rounded-pill border-0 shadow-none px-lg-8"
-                                                        href="/pages/dashboard.html">Explore
-                more</a></div>
-        </div>
-    </div>
 </div>
 
 <div class="container mt-5">
