--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
                 </a>
             </div>
         </nav>
-        <div class="container row align-items-center g-10">
-            <div class="col-lg-8"><h1 class="ls-tight fw-bolder display-3 text-white mb-5">Construção eficiente.</h1>
-                <p class="w-xl-75 lead text-white">Com as nossas ferramentas e componentes devidamente projetados pela nossa equipe, você terá o poder de elevar as expectativas do seu produto.</p>
+        <div class="container mt-5 align-items-center g-10">
+            <div class="container">
+                <h1 class="ls-tight fw-bolder display-3 mb-5">Produtos mais eficientes</h1>
+                <p class="w-xl-75 lead ">Com as nossas ferramentas e nossos componentes devidamente projetados pela nossa equipe,</p>
+                <p>você terá o poder de elevar as expectativas do seu produto.</p>
             </div>
         </div>
 </div>
