--- a/index.html
+++ b/index.html
@@ -21,8 +21,12 @@
         <div class="container mt-5 align-items-center g-10">
             <div class="container">
                 <h1 class="ls-tight fw-bolder display-3 mb-5">Produtos mais eficientes</h1>
-                <p class="w-xl-75 lead ">Com as nossas ferramentas e nossos componentes devidamente projetados pela nossa equipe,</p>
-                <p>você terá o poder de elevar as expectativas do seu produto.</p>
+                <span class="fs-5">Com mais de 15 anos de experiência e mais de 290 projetos em nosso portfolio,<br>
+                somos uma empresa de tecnologia focada em desenvolver plataformas digitais, aplicativos mobile, <br>
+                software web sob medida e sites para empresas e startups.<br>
+                Com as nossas ferramentas e nossos componentes devidamente projetados pela nossa equipe,<br>
+                você terá o poder de elevar as expectativas do seu produto.<br>
+                    <b>Conheça agora alguns cases desenvolvidos</b></span>
             </div>
         </div>
 </div>
