--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         </nav>
         <div class="container mt-5 align-items-center g-10">
             <div class="container">
-                <div class="col-4">
+                <div class="col mb-5">
                     <h1 class="ls-tight fw-bolder display-3 mb-5">Produtos mais eficientes</h1>
-                    <span class="fs-5">Com mais de 15 anos de experiência e mais de 290 projetos em nosso portfolio,<br>
+                    <span class="fs-5 p-5">Com mais de 15 anos de experiência e mais de 290 projetos em nosso portfolio,<br>
                         somos uma empresa de tecnologia focada em desenvolver plataformas digitais, aplicativos mobile, <br>
                         software web sob medida e sites para empresas e startups.<br>
                         Com as nossas ferramentas e nossos componentes devidamente projetados pela nossa equipe,<br>
