--- a/index.html
+++ b/index.html
@@ -66,10 +66,9 @@
             <div class="container mw-screen-xl">
                 <div class="row">
                     <div class="col-lg-6 col-md-10"><h5 class="h5 mb-5 text-uppercase text-primary">Como atuamos</h5>
-                        <h1 class="display-4 font-display text-white fw-bolder lh-tight mb-4">O que realmente importa</h1>
-                        <p class="text-lg text-white text-opacity-75">Com nossas ferramentas e nossos componentes devidamente projetados pela nossa equipe,
-                            você terá o poder de elevar as expectativas do seu produto.
-                            <b>Conheça agora alguns cases desenvolvidos.</p></div>
+                        <h1 class="display-4 font-display text-white fw-bolder lh-tight mb-4">Uma metodologia ágil e eficaz.</h1>
+                        <p class="text-lg text-white text-opacity-75">Com as nossas ferramentas e nossos componentes devidamente projetados pela nossa equipe, você terá o poder de elevar as expectativas do seu produto.<br><br>
+                            <b>Conh.</p></div>
                 </div>
                 <div class="row g-6 g-lg-20 my-10">
                     <div class="col-md-4">
