--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
                 <div class="row">
                     <div class="col-lg-6 col-md-10"><h5 class="h5 mb-5 text-uppercase text-primary">Como atuamos</h5>
                         <h1 class="display-4 font-display text-white fw-bolder lh-tight mb-4">Uma metodologia ágil e eficaz.</h1>
-                        <p class="text-lg text-white text-opacity-75">Com as nossas ferramentas e nossos componentes devidamente projetados pela nossa equipe, você terá o poder de elevar as expectativas do seu produto.<br><br>
-                            <b>Conh.</p></div>
+                        <p class="text-lg text-white text-opacity-75">Com as nossas ferramentas e nossos componentes devidamente projetados pela nossa equipe, você terá o poder de elevar as expectativas do seu produto.<br>
+                            <b>Conheça nosso modo de atuação.</p></div>
                 </div>
                 <div class="row g-6 g-lg-20 my-10">
                     <div class="col-md-4">
@@ -78,8 +78,7 @@
                                     <div class="icon icon-shape text-white bg-primary rounded-circle text-lg"><i
                                             class="bi bi-regex"></i></div>
                                 </div>
-                                <div class="pt-2 pb-3"><h5 class="h3 font-display fw-bold mb-3">Created with the latest
-                                    technologies</h5>
+                                <div class="pt-2 pb-3"><h5 class="h3 font-display fw-bold mb-3">Metodologia ágeis</h5>
                                     <p class="text-muted">We ensure our code is not just efficient and robust, but also
                                         highly adaptable and intuitive for developers.</p></div>
                             </div>
