--- a/index.html
+++ b/index.html
@@ -78,9 +78,8 @@
                                     <div class="icon icon-shape text-white bg-primary rounded-circle text-lg"><i
                                             class="bi bi-regex"></i></div>
                                 </div>
-                                <div class="pt-2 pb-3"><h5 class="h3 font-display fw-bold mb-3">Metodologia ágeis</h5>
-                                    <p class="text-muted">We ensure our code is not just efficient and robust, but also
-                                        highly adaptable and intuitive for developers.</p></div>
+                                <div class="pt-2 pb-3"><h5 class="h3 font-display fw-bold mb-3">Agilidade</h5>
+                                    <p class="text-muted">Utilizamos Scrum e Kanban para organização dos ciclos de desenvolvimento, para que nossas equipes estejam sempre bem alinhadas.</p></div>
                             </div>
                         </div>
                     </div>
@@ -91,10 +90,8 @@
                                     <div class="icon icon-shape text-white bg-primary rounded-circle text-lg"><i
                                             class="bi bi-person-workspace"></i></div>
                                 </div>
-                                <div class="pt-2 pb-3"><h5 class="h3 font-display fw-bold mb-3">Built by developers for
-                                    developers</h5>
-                                    <p class="text-muted">You require not just a theme, but also exceptional tools to
-                                        streamline the building and customization process.</p></div>
+                                <div class="pt-2 pb-3"><h5 class="h3 font-display fw-bold mb-3">Versionamento</h5>
+                                    <p class="text-muted">Todas as produções possuem versionamento, para garantir a integridade, rastreabilidade e colaboração eficiente ao longo do ciclo de vida do projeto.</p></div>
                             </div>
                         </div>
                     </div>
