--- a/index.html
+++ b/index.html
@@ -102,10 +102,8 @@
                                     <div class="icon icon-shape text-white bg-primary rounded-circle text-lg"><i
                                             class="bi bi-stars"></i></div>
                                 </div>
-                                <div class="pt-2 pb-3"><h5 class="h3 font-display fw-bold mb-3">Made for great first
-                                    impressions</h5>
-                                    <p class="text-muted">Our theme is lighter and faster compared to the majority of
-                                        themes available, delivering enhanced value for less.</p></div>
+                                <div class="pt-2 pb-3"><h5 class="h3 font-display fw-bold mb-3">MVC</h5>
+                                    <p class="text-muted">O MVC facilita a divisão clara das responsabilidades. Simplificamos o entendimento dos custos associados a cada componente do sistema. As modificações ou adições de recursos podem ser estimadas com mais precisão.</p></div>
                             </div>
                         </div>
                     </div>
