--- a/index.html
+++ b/index.html
@@ -75,8 +75,7 @@
                         <div class="card shadow-none border-0">
                             <div class="card-body p-7">
                                 <div class="mt-4 mb-7">
-                                    <div class="icon icon-shape text-white bg-primary rounded-circle text-lg"><i
-                                            class="bi bi-regex"></i></div>
+                                    <div class="icon icon-shape text-white bg-primary rounded-circle text-lg"><i class="bi bi-magic"></i></div>
                                 </div>
                                 <div class="pt-2 pb-3"><h5 class="h3 font-display fw-bold mb-3">Agilidade</h5>
                                     <p class="text-muted">Utilizamos Scrum e Kanban para organização dos ciclos de desenvolvimento, para que nossas equipes estejam sempre bem alinhadas.</p></div>
@@ -87,8 +86,8 @@
                         <div class="card shadow-none border-0">
                             <div class="card-body p-7">
                                 <div class="mt-4 mb-7">
-                                    <div class="icon icon-shape text-white bg-primary rounded-circle text-lg"><i
-                                            class="bi bi-person-workspace"></i></div>
+                                    <div class="icon icon-shape text-white bg-primary rounded-circle text-lg">
+                                        <i class="bi bi-github"></i></div>
                                 </div>
                                 <div class="pt-2 pb-3"><h5 class="h3 font-display fw-bold mb-3">Versionamento</h5>
                                     <p class="text-muted">Todas as produções possuem versionamento, para garantir a integridade, rastreabilidade e colaboração eficiente ao longo do ciclo de vida do projeto.</p></div>
@@ -103,7 +102,7 @@
                                             class="bi bi-stars"></i></div>
                                 </div>
                                 <div class="pt-2 pb-3"><h5 class="h3 font-display fw-bold mb-3">MVC</h5>
-                                    <p class="text-muted">O MVC facilita a divisão clara das responsabilidades. Simplificamos o entendimento dos custos associados a cada componente do sistema. As modificações ou adições de recursos podem ser estimadas com mais precisão.</p></div>
+                                    <p class="text-muted">Proporciona a divisão das responsabilidades. Simplificamos o entendimento dos custos e cada componente do sistema. As modificações ou adições de recursos podem ser estimadas com mais precisão.</p></div>
                             </div>
                         </div>
                     </div>
