--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                                         <i class="bi bi-github"></i></div>
                                 </div>
                                 <div class="pt-2 pb-3"><h5 class="h3 font-display fw-bold mb-3">Versionamento</h5>
-                                    <p class="text-muted">Todas as produções possuem versionamento, para garantir a integridade, rastreabilidade e colaboração eficiente ao longo do ciclo de vida do projeto.</p></div>
+                                    <p class="text-muted">Aplicamos de maneira consistente. Ele possui um papel essencial no sucesso da gestão de nossos projetos, permitindo facilitar a identificação de pontos de falha e promovendo uma maior eficiência do produto final.</p></div>
                             </div>
                         </div>
                     </div>
