--- a/index.html
+++ b/index.html
@@ -236,6 +236,37 @@
         </div>
         <div class="py-20 py-lg-20">
             <div class="container mw-screen-xl">
+                <div class="py-32 gradient-bottom-right start-indigo middle-purple end-gray rounded-5 px-lg-16 text-center text-md-start">
+                    <div class="row justify-content-center">
+                        <div class="col-12 col-md-10 col-lg-8 text-center">
+                            <div id="carouselExample" class="carousel slide">
+                                <div class="carousel-inner">
+                                    <div class="carousel-item active">
+                                        <img src="images/examples/smart_correios.png" class="d-block w-100" alt="Smart Correios">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="..." class="d-block w-100" alt="...">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="..." class="d-block w-100" alt="...">
+                                    </div>
+                                </div>
+                                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Previous</span>
+                                </button>
+                                <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Next</span>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="py-20 py-lg-20">
+            <div class="container mw-screen-xl">
                 <div class="row align-items-center mb-20">
                     <div class="col-lg-6 mb-4 mb-lg-0"><h1 class="display-5 ls-tight mb-5">Empowering Your Development
                         Journey</h1>
@@ -527,7 +558,7 @@
 <div class="d-flex align-items-center gap-2 position-fixed bottom-0 end-0 mb-6 me-6 px-2 py-2 rounded-pill shadow-4 bg-white z-2">
     <img class="avatar avatar-xs" src="images/dark-sm.svg"> <a class="me-1 text-heading fw-bold text-xs ls-tight stretched-link"
                                                                href="https://webpixels.io?ref=satoshi"
-                                                               target="_blank">Built by Webpixels</a></div>
+                                                               target="_blank">Visite Craos.NET</a></div>
 <script src="js/choices.min.js"></script>
 <script src="js/main.js"></script>
 </body>
