--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta content="width=device-width,initial-scale=1,viewport-fit=cover" name="viewport">
     <meta content="dark light" name="color-scheme">
-    <title>Craos.NET Portfólio</title>
+    <title>Craos.NET - Portfólio</title>
     <link href="css/main.css" rel="stylesheet" type="text/css">
     <link href="css/utility.css" rel="stylesheet" type="text/css">
     <link href="css/bootstrap-icons.css" rel="stylesheet">
