--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="w-lg-75 mx-2 mx-lg-auto position-relative z-2 px-lg-3 py-1 shadow-5 rounded-3 rounded-lg-pill bg-dark">
             <nav class="navbar navbar-expand-lg navbar-dark p-0" id="navbar">
                 <div class="container px-sm-0"><a class="navbar-brand d-inline-block w-lg-64" href="#"><img
-                        alt="..." class="h-rem-10" src="images/logo-light.svg"> </a>
+                        alt="..." class="h-rem-10" src="images/logobrancotransp.png"> </a>
                     <button aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation"
                             class="navbar-toggler" data-bs-target="#navbarCollapse" data-bs-toggle="collapse"
                             type="button"><span class="navbar-toggler-icon"></span></button>
@@ -66,11 +66,12 @@
             <div class="container mw-screen-xl">
                 <div class="row">
                     <div class="col-lg-6 col-md-10"><h5 class="h5 mb-5 text-uppercase text-primary">Como atuamos</h5>
-                        <h1 class="display-4 font-display text-white fw-bolder lh-tight mb-4">Uma metodologia ágil e eficaz.</h1>
-                        <p class="text-lg text-white text-opacity-75">Com as nossas ferramentas e nossos componentes devidamente projetados pela nossa equipe, você terá o poder de elevar as expectativas do seu produto.<br>
-                            <b>Conheça nosso modo de atuação.</p></div>
+                        <h1 class="display-4 font-display text-white fw-bolder lh-tight mb-4">Ágil e eficaz.</h1>
+                        <p class="text-lg text-white text-opacity-75">Com as nossas ferramentas e nossos componentes devidamente projetados pela nossa equipe, você terá o poder de elevar as expectativas do seu produto.</p>
+                        <h6 class="text-lg text-white text-opacity-75 mt-2">Conheça nosso modo de atuação.</h6>
+                    </div>
                 </div>
-                <div class="row g-6 g-lg-20 my-10">
+                <div class="row g-6 g-lg-20 my-4">
                     <div class="col-md-4">
                         <div class="card shadow-none border-0">
                             <div class="card-body p-7">
