--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <div class="collapse navbar-collapse" id="navbarCollapse">
                         <ul class="navbar-nav gap-2 mx-lg-auto">
                             <li class="nav-item"><a aria-current="page" class="nav-link rounded-pill"
-                                                    href="/">Product</a></li>
+                                                    href="/">Metodologia</a></li>
                             <li class="nav-item"><a class="nav-link rounded-pill"
                                                     href="/pages/dashboard.html">Dashboard</a></li>
                             <li class="nav-item"><a class="nav-link rounded-pill" href="/pages/page-table-listing.html">Trade</a>
@@ -557,9 +557,9 @@
     </footer>
 </div>
 <div class="d-flex align-items-center gap-2 position-fixed bottom-0 end-0 mb-6 me-6 px-2 py-2 rounded-pill shadow-4 bg-white z-2">
-    <img class="avatar avatar-xs" src="images/dark-sm.svg"> <a class="me-1 text-heading fw-bold text-xs ls-tight stretched-link"
-                                                               href="https://webpixels.io?ref=satoshi"
-                                                               target="_blank">Visite Craos.NET</a></div>
+    <img class="avatar avatar-xs" src="images/craos_100x100.png" alt="visite a Craos.NET">
+    <a class="me-1 text-heading fw-bold text-xs ls-tight stretched-link" href="https://webpixels.io?ref=satoshi" target="_blank">Visite Craos.NET</a>
+</div>
 <script src="js/choices.min.js"></script>
 <script src="js/main.js"></script>
 </body>
