--- a/index.html
+++ b/index.html
@@ -124,12 +124,9 @@
                 <div class="section-step-lg">
                     <div class="row justify-content-between align-items-center">
                         <div class="col-lg-5 mb-7 mb-lg-0"><h5 class="h5 mb-5 text-uppercase fw-bolder text-primary">
-                            Speed</h5>
-                            <h1 class="ls-tight font-display fw-bolder mb-5">Build a new website in hours, not
-                                weeks</h1>
-                            <p class="lead">Instead of starting from scratch, you can use our template to quickly create
-                                a professional-looking website without having to spend hours or even days designing and
-                                coding it.</p>
+                            Smart Correios</h5>
+                            <h1 class="ls-tight font-display fw-bolder mb-5">Uma extensão do sistema de correios.</h1>
+                            <p class="lead">Uma ferramenta simples e eficaz. Utilizada em ambiente de condomínios, para organização de encomendas, comunicação de recebimentos e autorizações de entrega das encomendas.</p>
                             <ul class="list-unstyled mt-6 mb-0">
                                 <li class="py-2">
                                     <div class="d-flex align-items-center">
@@ -138,7 +135,7 @@
                                                 <i class="bi bi-check"></i></div>
                                         </div>
                                         <div><span
-                                                class="fw-semibold">Quickly create a professional-looking website</span>
+                                                class="fw-semibold">Fácil implantação e intuitíva</span>
                                         </div>
                                     </div>
                                 </li>
