--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                                             <div class="icon icon-xs icon-shape bg-success text-white text-base rounded-circle me-3">
                                                 <i class="bi bi-check"></i></div>
                                         </div>
-                                        <div><span class="fw-semibold">Well designed elements and pages</span></div>
+                                        <div><span class="fw-semibold">Multiplos canais de comunicação SMTP, Telegram, Whatsapp</span></div>
                                     </div>
                                 </li>
                                 <li class="py-2">
@@ -154,16 +154,15 @@
                                             <div class="icon icon-xs icon-shape bg-success text-white text-base rounded-circle me-3">
                                                 <i class="bi bi-check"></i></div>
                                         </div>
-                                        <div><span class="fw-semibold">Professional-looking website quickly and affordably</span>
+                                        <div><span class="fw-semibold">Controle de rastreio das comunicações e relatórios operacionais</span>
                                         </div>
                                     </div>
                                 </li>
                             </ul>
                         </div>
                         <div class="col-lg-6">
-                            <div class="bg-primary overflow-hidden rounded-4 ps-8 pt-8"><img alt="..."
-                                                                                             class="img-fluid"
-                                                                                             src="images/shot-2.png"></div>
+                            <div class="bg-primary overflow-hidden rounded-4 ps-8 pt-8">
+                                <img alt="Craos.NET - Smart Correios" class="img-fluid rounded" src="images/examples/smart_correios.png"></div>
                         </div>
                     </div>
                 </div>
