--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                         </div>
                         <div class="col-lg-6">
                             <div class="bg-primary overflow-hidden rounded-4 ps-8 pt-8">
-                                <img alt="Craos.NET - Smart Correios" class="img-fluid rounded" src="images/examples/smart_correios.png"></div>
+                                <img alt="Craos.NET - Smart Correios" class="img-fluid rounded-4" src="images/examples/smart_correios.png"></div>
                         </div>
                     </div>
                 </div>
